# django-tof

./: .gitignore  .readthedocs.yaml  AUTHORS  README.md  README_ru.md  pyproject.toml  wiki_django_tof.md
docs/: conf.py  index.rst  toc_api.rst  tof_api.rst
docs/source/: conf.py  index.rst  tof_api.rst
docs/source/_static/: README.md
docs/source/_templates/autosummary/: module.rst
example/: pyproject.toml  requirements.txt
example/locale/ru/LC_MESSAGES/: django.po
example/locale/sk/LC_MESSAGES/: django.po
example/main/: translation.py
example/main/migrations/: 0001_initial.py  0002_wine_description_en_wine_description_sk.py
example/main/templates/main/: index.html
example/settings/: asgi.py  settings.py  urls.py  wsgi.py
example_project/: pyproject.toml
example_project/example/: settings.py  urls.py
example_project/main/: admin.py  models.py  views.py
src/: pyproject.toml
src/django-tof/: actions.py  queryset.py
src/django-tof/migrations/: 0001_initial.py  0003_create_field_for_static.py
src/static/tof/js/: translation_inline.js
src/tof/: __init__.py  admin.py  apps.py  mixins.py
src/tof/management/commands/: create_js_from_static_translation.py
src/tof/migrations/: 0001_initial.py
src/tof/templates/tof/: language_switcher.html  multiwidget.html
tests/: __init__.py  benchmark.py  models.py  test_utils.py  tests.txt
tof/: __init__.py  actions.py  admin.py  apps.py  fields.py  forms.py  mixins.py  models.py  queryset.py  utils.py  views.py  widgets.py
tof/admin/: __init__.py  admin.py
tof/fixtures/: languages_data.json
tof/management/commands/: benchmark.py  create_js_from_static_translation.py  fill_db.py
tof/migrations/: 0001_initial.py  0002_load_languages.py  0003_create_field_for_static.py  0004_remove_translatablefield_title.py  0005_alter_translation_content_type_and_more.py
tof/static/tof/css/: style.css
tof/static/tof/js/: autocomplete_utils.js  translatable_fields_widget.js  translation_form.js
tof/templates/tof/: multiwidget.html
tof/tests/: benchmark.py  models.py  settings.py  test_by_import.py  test_utils.py  tests.txt
