[tool.poetry]
name = "django-tof"
version = "2.1.0"
description = "Translate fields of django models without having to restart the server,  without changing the model code."
authors = ["Danilov Maxim <maxim@wpshop.at>"]
maintainers = ["Danilov Maxim <maxim@wpshop.at>"]
license = "MIT"
repository = "https://github.com/danilovmy/django-tof"
homepage = "https://django-tof.readthedocs.io/"
keywords = ["translations", "translate", "django", "model", "translation-management"]
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django >=4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: >=3.9",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Linguistic"
]

packages = [
    { include = "django-tof", from = "src/**/*.*", to="tof"}
]

[tool.poetry.dependencies]
python = ">=3.9"
django = ">=3.1"

[tool.poetry.dev-dependencies]
ruff="*"

[tool.ruff]
line-length = 320
target-version = "py39"
select = ["F", "I", "UP"] # isort, # pyflakes, # upgrade syntax for new PYthon versions

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"
avoid-escape = true

[tool.ruff.format]
quote-style = "single"
