[project]
name = "django-tof"
version = "2.1.0"
description = "Translate fields of django models without having to restart the server,  without changing the model code."
authors = [{name="Danilov Maxim", email="maxim@wpshop.at"}]
maintainers = [{name="Danilov Maxim", email="maxim@wpshop.at"}]
license = {text = "MIT License"}

keywords = ["translations", "translate", "django", "model", "translation-management"]
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django >=4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: >=3.9",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Linguistic"
]

requires-python = ">= 3.9"

dependencies = [
    "django>=4.0"
]

[project.optional-dependencies]
dev = [
    "ruff"
]

[project.urls]
repository = "https://github.com/danilovmy/django-tof"
homepage = "https://github.com/danilovmy/django-tof"
documentation = "https://django-tof.readthedocs.io/"
wiki = "https://github.com/danilovmy/django-tof/wiki_django_tof.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["static/*", "templates/*", "fixtures/*"]

[tool.ruff]
line-length = 320
target-version = "py39"
select = ["F", "I", "UP"] # isort, # pyflakes, # upgrade syntax for new PYthon versions

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"
avoid-escape = true

[tool.ruff.format]
quote-style = "single"
