[tool.poetry]
name = "example_project"
version = "0.5.1"
description = ""
authors = ["Danilov Maxim <maxim@wpshop.at>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0"
django-tof = {path = "..", develop = true}

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
coverage = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
